--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
   <!-- SCREEN 1 -->
   <div class="card" id="screen1">
     <h1>Hello Hii</h1>
-    <p>I made something for you.<br>Just trust me.</p>
+    <p>I made something for you.<br>Just trust me kk.</p>
     <button id="yesBtn" onclick="goToQuestion()">Continue</button>
   </div>
 
   <!-- SCREEN 2 -->
   <div class="card hidden" id="screen2">
-    <h1>So… 💕</h1>
+    <h1>So…....😁 </h1>
     <p>Will you be my Valentine on 15th feb? 🥹</p>
     <button id="yesBtn" onclick="yesClicked()">Yes 😚</button>
     <button id="noBtn" onmouseover="moveNo()">No 🙃</button>
