--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <!-- SCREEN 3 -->
   <div class="card hidden" id="screen3">
     <h1>HEHEHEHEHE</h1>
-    <p>Best decision you’ve made today 😌<br>Happy Valentine’s Day My Saumewww 🥰</p>
+    <p>Best decision you’ve made today 😌<br>Happy Valentine’s Day My Saumeww 🥰</p>
 
     <!-- 🔴 REPLACE THIS GIF LINK -->
     <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExcHNmOWZ1eDF3MTQwbWptNGh3OG42eDc1ZHcxcmF6cWVyYndyYTczdyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/IwAZ6dvvvaTtdI8SD5/giphy.gif">
@@ -154,14 +154,14 @@
         const emoji = document.createElement("div");
         emoji.className = "emoji";
         emoji.innerText = emojis[Math.floor(Math.random() * emojis.length)];
-        emoji.style.left = Math.random() * 100 + "vw";
-        emoji.style.fontSize = (20 + Math.random() * 20) + "px";
+        emoji.style.left = Math.random() * 300 + "vw";
+        emoji.style.fontSize = (40 + Math.random() * 40) + "px";
         document.body.appendChild(emoji);
 
         setTimeout(() => {
           emoji.remove();
-        }, 6000);
-      }, 400);
+        }, 8000);
+      }, 600);
     }
   </script>
 
